# SPDX-License-Identifier: Apache-2.0 OR MIT
#
# SPDX-FileCopyrightText: Copyright 2020 Micron Technology, Inc.

c0_sources = files(
    'c0.c',
    'c0snr_set.c',
    'c0_ingest_work.c',
    'c0_kvmultiset.c',
    'c0_kvset.c',
    'c0_kvset_iterator.c',
    'c0sk.c',
    'c0sk_internal.c',
    'c0sk_perfc.c'
)
