cn_sources = files(
    'blk_list.c',
    'bloom_reader.c',
    'cn.c',
    'cndb.c',
    'cndb_omf.c',
    'cn_kvdb.c',
    'cn_perfc.c',
    'cn_tree.c',
    'csched.c',
    'csched_noop.c',
    'csched_sp3.c',
    'csched_sp3_work.c',
    'hse_log_fmt.c',
    'intern_builder.c',
    'kblock_builder.c',
    'kblock_reader.c',
    'kcompact.c',
    'keep.c',
    'kvset_builder.c',
    'kvset.c',
    'kvset_checker.c',
    'mbset.c',
    'spill.c',
    'vblock_builder.c',
    'vblock_reader.c',
    'vcomp_params.c',
    'wbt_builder.c',
    'wbt_reader.c',
    'wbt_reader_v4.c',
    'wbt_reader_v5.c',
)

cn_includes = include_directories('.')
