kvdb_sources = files(
    'ctxn_perfc.c',
    'hse_params.c',
    'ikvdb.c',
    'kvdb_cparams.c',
    'kvdb_ctxn.c',
    'kvdb_health.c',
    'kvdb_keylock.c',
    'kvdb_log.c',
    'kvdb_rest.c',
    'kvdb_rparams.c',
    'mclass_policy.c',
    'sched_sts.c',
    'sched_sts_perfc.c',
    'throttle.c',
    'viewset.c',
    'wp.c',
)

kvdb_includes = include_directories('.')
