kvdb_sources = files(
    'ctxn_perfc.c',
    'ikvdb.c',
    'kvdb_cparams.c',
    'kvdb_ctxn.c',
    'kvdb_ctxn_pfxlock.c',
    'kvdb_dparams.c',
    'kvdb_health.c',
    'kvdb_home.c',
    'kvdb_keylock.c',
    'kvdb_meta.c',
    'kvdb_pfxlock.c',
    'kvdb_rest.c',
    'kvdb_rparams.c',
    'mclass_policy.c',
    'sched_sts.c',
    'sched_sts_perfc.c',
    'throttle.c',
    'viewset.c',
)

kvdb_includes = include_directories('.')
