kvdb_sources = files(
    'ikvdb.c',
    'kvdb_cparams.c',
    'kvdb_ctxn.c',
    'kvdb_ctxn_pfxlock.c',
    'kvdb_health.c',
    'kvdb_home.c',
    'kvdb_keylock.c',
    'kvdb_meta.c',
    'kvdb_pfxlock.c',
    'kvdb_rest.c',
    'kvdb_rparams.c',
    'mclass_policy.c',
    'sched_sts.c',
    'throttle.c',
    'viewset.c',
)

kvdb_includes = include_directories('.')
